Menyelesaikan tampilan dasar, membuat view model dan live data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DesaA[[</string>
+    <string name="app_name">DesaApp</string>
     <string name="www_sunistheworld_com">www.sunistheworld.com</string>
     <string name="pt_synergy_utility_network">PT. Synergy Utility Network</string>
     <string name="desa_tenrigangkae">Desa Tenrigangkae</string>
@@ -35,4 +35,60 @@
     <string name="pengajuan_n_surat_pengantar_dusun_n_berhasil_dilakukan">Pengajuan\n Surat Pengantar Dusun\n Berhasil Dilakukan</string>
     <string name="daftar_pengajuan_surat">Daftar Pengajuan Surat</string>
     <string name="daftar_penerima_bantuan_sosial">Daftar Penerima Bantuan Sosial</string>
+    <string name="title_activity_home_headman">HomeHeadmanActivity</string>
+    <string name="administrasi_desa">Administrasi Desa</string>
+    <string name="aparat_pemerintah_desa">Aparat Pemerintah Desa</string>
+    <string name="dashboard_n_kepala_desa">Dashboard\nKepala Desa</string>
+    <string name="tekan_tombol_dibawah_ini_jika_data_telah_lengkap_terinput">Tekan tombol dibawah ini jika data telah lengkap terinput</string>
+    <string name="tenrigangkae">Tenrigangkae</string>
+    <string name="wahyu_febri">Wahyu Febri</string>
+    <string name="statistik_desa">Statistik Desa</string>
+    <string name="_2500">2500</string>
+    <string name="_1200">1200</string>
+    <string name="_700">700</string>
+    <string name="_350">350</string>
+    <string name="jumlah_npenduduk_perempuan">Jumlah\nPenduduk Perempuan</string>
+    <string name="jumlah_npenduduk">Jumlah\nPenduduk</string>
+    <string name="jumlah_npenduduk_dewasa">Jumlah\nPenduduk Dewasa</string>
+    <string name="jumlah_npenduduk_laki_laki">Jumlah\nPenduduk laki-laki</string>
+    <string name="jumlah_penduduk_ngol_darah_a">Jumlah Penduduk\nGol. Darah A</string>
+    <string name="jumlah_penduduk_gol_darah_b">Jumlah Penduduk\nGol. Darah B</string>
+    <string name="_125">125</string>
+    <string name="jumlah_penduduk_gol_darah_o">Jumlah Penduduk\n Gol. Darah O</string>
+    <string name="jumlah_penduduk_gol_darah_ab">Jumlah Penduduk\n Gol. Darah AB</string>
+    <string name="wilayah_desa">Wilayah Desa</string>
+    <string name="website_desa">Website Desa</string>
+    <string name="www_tenrigangkae_id">www.tenrigangkae.id</string>
+    <string name="telepon_desa">Telepon Desa</string>
+    <string name="_086346236725">086346236725</string>
+    <string name="peraturan_desa">Peraturan Desa</string>
+    <string name="keputusan_kepala_desa">Keputusan Kepala Desa</string>
+    <string name="daftar_pengajuan_nsurat_pengantar_dusun">Daftar Pengajuan\nSurat Pengantar Dusun</string>
+    <string name="terimakasih_ntelah_senantiasa_mengabdi_nuntuk_masyarakat_desa_tenrigangkae">Terimakasih\ntelah senantiasa mengabdi\nuntuk masyarakat Desa Tenrigangkae.</string>
+    <string name="surat_pengantar_dusun_telah_dibuat_nuntuk_proses_selanjutnya_nmasyarakat_dapat_mengunjungi_nkantor_desa_untuk_mencetak_surat">Surat Pengantar Dusun Telah Dibuat\nUntuk proses selanjutnya\nmasyarakat dapat mengunjungi\nkantor desa untuk mencetak surat.</string>
+    <string name="ok_kembali_ke_dashboard">OK, kembali ke Dashboard</string>
+    <string name="pemeriksaan_data_nsurat_pengantar_dusun">Pemeriksaan Data\nSurat Pengantar Dusun</string>
+    <string name="nomor_nik_pemohon">Nomor NIK Pemohon</string>
+    <string name="_78467563474746856">78467563474746856</string>
+    <string name="nama_pemohon">Nama Pemohon</string>
+    <string name="bambang_sutejo">Bambang Sutejo</string>
+    <string name="surat_yang_akan_diurus">Surat yang akan diurus</string>
+    <string name="saya_ingin_mengurus_surat_keterangan_untuk_usaha_saya_bang_mohon_dibantu_surat_pengantarnya">Saya ingin mengurus surat keterangan untuk usaha saya bang, mohon dibantu surat pengantarnya</string>
+    <string name="keterangan">Keterangan</string>
+    <string name="foto_ktp">Foto KTP</string>
+    <string name="tekan_tombol_dibawah_ini_jika_data_telah_anda_setujui">Tekan tombol dibawah ini jika data telah anda setujui</string>
+    <string name="buatkan_surat_pengantar">Buatkan Surat Pengantar</string>
+    <string name="surat_keterangan_pengantar_desa">Surat Keterangan Pengantar Desa</string>
+    <string name="surat_keterangan_usaha">Surat Keterangan Usaha</string>
+    <string name="surat_pengantar_dusun_abc">Surat Pengantar Dusun ABC</string>
+    <string name="bantuan_sosial_jamkesmas">Bantuan Sosial JAMKESMAS</string>
+    <string name="ishak_s_kom">Ishak, S Kom</string>
+    <string name="nama_warga">Nama Warga</string>
+    <string name="perdes_spj_tentang_keuangan_desa_tahun_2016">Perdes SPJ Tentang Keuangan Desa Tahun 2016</string>
+    <string name="_1_09_01_2016">1 / 09-01-2016</string>
+    <string name="ditetapkan">Ditetapkan :</string>
+    <string name="sekretaris_desa">Sekretaris Desa</string>
+    <string name="mustahiq_s_adm">Mustahiq S.Adm</string>
+    <string name="nip_197905062010011007">NIP :197905062010011007</string>
+    <string name="nik_5201140506790001">NIK :5201140506790001</string>
 </resources>
