--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,4 +91,5 @@
     <string name="mustahiq_s_adm">Mustahiq S.Adm</string>
     <string name="nip_197905062010011007">NIP :197905062010011007</string>
     <string name="nik_5201140506790001">NIK :5201140506790001</string>
+    <string name="bantuan_sosial_bpnt">Bantuan Sosial BPNT</string>
 </resources>
