--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,7 +85,7 @@
     <string name="ishak_s_kom">Ishak, S Kom</string>
     <string name="nama_warga">Nama Warga</string>
     <string name="perdes_spj_tentang_keuangan_desa_tahun_2016">Perdes SPJ Tentang Keuangan Desa Tahun 2016</string>
-    <string name="_1_09_01_2016">1 / 09-01-2016</string>
+    <string name="_1_09_01_2016">1 / 09–01-2016</string>
     <string name="ditetapkan">Ditetapkan :</string>
     <string name="sekretaris_desa">Sekretaris Desa</string>
     <string name="mustahiq_s_adm">Mustahiq S.Adm</string>
@@ -94,4 +94,8 @@
     <string name="bantuan_sosial_bpnt">Bantuan Sosial BPNT</string>
     <string name="coba_lagi">Coba Lagi</string>
     <string name="no_signal">No Signal</string>
+    <string name="nip">Nip \t : %1s</string>
+    <string name="nik">Nik \t : %1s</string>
+    <string name="describe_detail_social_assistance">JAMKESMAS adalah sebuah program jaminan kesehatan untuk warga Indonesia yang memberikan perlindungan sosial dibidang kesehatan.</string>
+
 </resources>
