memperbaiki login dan theme gelap

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,5 +104,6 @@
     <string name="untuk_pengurusan_bantuan_sosial_dan_pencairan_dana_bantuan_silahkan_menghubungi_aparatur_desa_tenrigangkae_atau_datang_langsung_ke_kantor_desa_tenrigangkae">Untuk pengurusan bantuan sosial dan pencairan dana bantuan silahkan menghubungi aparatur Desa Tenrigangkae atau datang langsung ke Kantor Desa Tenrigangkae.</string>
     <string name="data_kosong">Data belum ada</string>
     <string name="dion">Dion</string>
+    <string name="ambil_gambar_ktp">Ambil gambar KTP</string>
 
 </resources>
